[package]
name = "DHBW_electrolyzer_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["env", "derive"] }
modbus_device = { git = "ssh://git@github.com/lkzjdnb/modbus_device.git" }
log = "0.4.22"
env_logger = "0.11.3"
rand = "0.8.5"
